--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
+
+
   <head>
+      <link
+  href="https://fonts.googleapis.com/css2?family=Creepster&family=Cinzel:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
